--- a/src/pages/map/styles/sidebar.css
+++ b/src/pages/map/styles/sidebar.css
@@ -20,6 +20,12 @@ aside.sidebar {
   margin-top: 1rem;
   width: 95%;
 }
+aside.sidebar .sidebar-wrapper .notification {
+  display: block;
+}
+aside.sidebar.closed .sidebar-wrapper .notification {
+  display: none;
+}
 .sidebar-toggle-image-container {
   height: 4rem;
   width: 4rem;
